Fixed align article controls in the header

--- a/src/components/Nav/Header.module.scss
+++ b/src/components/Nav/Header.module.scss
@@ -319,6 +319,7 @@
 
 .articleControls {
   display: flex;
+  justify-content: end;
   left: 0;
   position: absolute;
   top: 50%;
